2005-01-10  Joe English  <jenglish@users.sourceforge.net>
	* unix/Makefile.in, unix/configure.in, unix/tkConfig.sh.in:
	Remove ${DBGX}, ${TK_DBGX} from Tk build system [Patch 1081595].
	* unix/tcl.m4: re-synced with tcl/unix/tcl.m4
	* unix/configure: Regenerated.

2005-01-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkWindow.c (GetScreen): Make sure the result is reset on
	all error paths to stop strange errors. [Bug 697915]

2005-01-05  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/loadTk.n, doc/toplevel.n: Convert to other form of emacs
	mode control comment to prevent problems with old versions of
	man. [Bug 1085127]

2005-01-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinWm.c (TkWinWmCleanup): clean up layered window class.
	This caused crash in reinit of Tk (as seen in plugin).

2004-12-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tcl.m4, win/configure: update MSVC CFLAGS_OPT to -O2, remove
	-Gs (included in -O2) and -GD (outdated).  Use "link -lib" instead
	of "lib" binary and remove -YX for MSVC7 portability.  Add
	-fomit-frame-pointer for gcc OPT compiles. [Bug 1092952, 1091967]

2004-12-21  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/demos/*.tcl: Add [package require Tk] to all the widget
	demo scripts so they follow standard practice better. [FRQ 815118]

2004-12-20  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tkFileFilter.c:
	* generic/tkFileFilter.h: 
	* macosx/tkMacOSXDialog.c:
	* win/tkWinDialog.c:
	* tests/filebox.test:
	* tests/winDialog.test: Corrected handling of MacOS file types
	in tk_*file dialogs [Bug 1083878].

2004-12-20  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/panedwindow.n: Fix silly typo. [Bug 1087842]

2004-12-19  Chengye Mao  <chengye.geo@yahoo.com>

	* win/tkWin.h, win/tkWinEmbed.h: Make embedding work better on Windows.
	* win/tkWinWm.c, win/tkWinX.c:   [Bugs 222667, 831627, 842945, 1024364]

2004-12-17  Chengye Mao  <chengye.geo@yahoo.com>
