@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: $Id: tkInt.h,v 1.64 2004/10/26 13:15:09 dkf Exp $ 
+ * RCS: $Id: tkInt.h,v 1.65 2005/01/11 10:35:27 dkf Exp $ 
  */
 
 #ifndef _TKINT
@@ -1181,6 +1181,11 @@ EXTERN void		TkpBuildRegionFromAlphaData _ANSI_ARGS_((
 			    unsigned int width, unsigned int height,
 			    unsigned char *dataPtr, unsigned int pixelStride,
 			    unsigned int lineStride));
+EXTERN void		TkPrintPadAmount _ANSI_ARGS_((Tcl_Interp *interp,
+			    char *buffer, int pad1, int pad2));
+EXTERN int		TkParsePadAmount _ANSI_ARGS_((Tcl_Interp *interp,
+			    Tk_Window tkwin, Tcl_Obj *objPtr,
+			    int *pad1Ptr, int *pad2Ptr));
 
 /* 
  * Unsupported commands.
